Mentions how dw5_names.o created. 	modified:   README
Compiled differently, so a new testcase.
	new file:   dw5_names.o

--- a/pubnames/README
+++ b/pubnames/README
@@ -15,4 +15,7 @@ such as
 Another test case:
 g++ -gdwarf-5 -gpubnames -c pubname.cc
 
+pubname.cc was compiled with a .debug_name
+section for us as: dw5_names.o
+
 David Anderson
