Corrected accidental lost of a filediff shell function call 	modified:   DWARFTEST.sh
Just debugging lines added.
	modified:   RUNVAL

Some baselines added
Some changed  due
to improved Elf file checking.
	modified:   baselines/test_simplereaderb4.base
	new file:   baselines/test_simplereaderb4b.base
	deleted:    bitoffset.base
	modified:   dwarfdump-x86_64-ubuntu.O
	modified:   filelist/baseresult
	modified:   filelist/runtest.sh
	modified:   ossfuzz54724/README
	modified:   showsecgroupsdir/runtest.sh
	modified:   showsecgroupsdir/sgtest.baseline
	modified:   showsecgroupsdir/sgtest2.baseline

Moved these to baselines/
	deleted:    test_arangeb.base
	deleted:    test_harmlessb.base
	deleted:    test_pubsreaderb.base
	deleted:    test_sectionnamesb.base

Changed  due
to improved Elf file checking.
	modified:   testfindfuncbypc/findfuncbypc.base

--- a/ossfuzz54724/README
+++ b/ossfuzz54724/README
@@ -12,8 +12,8 @@ section has section strings.
 
 The header says section strings are in section 0.
 
-If one thinks section [1] is .gnu.debuglink
-one will find the description size is huge
+It thinks section [1] is .gnu.debuglink
+and one finds the description size is huge
 (but so is the section itself!) and
-that is unreasonable.
+that size is unreasonable.
 
